<resources>
    <string name="app_name">Go Fun</string>
    <string name="alert_empty">Log Empty</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="login_register">Not A Member? Register Now</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_login">Already Member? Login Now</string>
    <string name="message_logging_in">Logging In</string>
    <string name="action_logout">Logout</string>
    <string name="registering_user">Registering User</string>
    <string name="error_password_match">Password Dosen\'t Match</string>
    <string name="default_timer">00:00:00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timer">Timer</string>
    <string name="logs">Logs</string>
    <string name="action_stop_timer">Stop Timer</string>
    <string name="action_about">About</string>
    <string name="changelog">Changelog</string>
    <string name="app_version">v0.8.2</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Aditya Kamble</string>
    <string name="developer_country">India</string>
    <string name="fork_on_github">Fork on Github</string>
    <string name="view_portfolio">View Portfolio</string>
    <string name="inspirations">Inspirations</string>
    <string name="inspiration_gohome">GoHome Developer</string>
    <string name="inspiration_gohome_developer">Akshay Chordiya</string>
    <string name="inspiration_gohome_mobile_thinker">Piyush Mulik</string>
    <string name="inspiration_gohome_mobile_idea">GoHome Mobile Version Idea</string>
    <string name="inspiration_gohome_title">GoHome</string>
    <string name="inspiration_gohome_fork">Fork on Github</string>
    <string name="default_timer_percent">00</string>
    <string name="default_time_out">00:00:00</string>
    <string name="default_time_in">00:00:00</string>
</resources>
