<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adityakamble49.ttl.activities.LoginActivity">

    <EditText
        android:id="@+id/v_et_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/v_et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_et_login_username"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/v_bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_et_login_password"
        android:text="@string/login"/>

    <Button
        android:id="@+id/v_bt_login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_bt_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/login_register"/>

</RelativeLayout>
